--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=django-insecure-_9&i359!+(8#a-gf&5*s4=5$zk^s43-ytrw@*%slvp-z&^57!q
 DEBUG=False
-DATABASE_URL=mysql://yuki:gyudon176@apidb:192.168.56.104/mdsystemdb
+DATABASE_URL=mysql://yuki:gyudon176@apidb:19216856104/mdsystemdb
