--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-cleanup==5.2.0
 django-cors-headers==3.10.1
 django-environ==0.8.1
 django-filter==21.1
+django-heroku==0.0.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 docker==5.0.3
@@ -65,6 +66,7 @@ mistune==0.8.4
 msgpack==1.0.2
 mypy-extensions==0.4.3
 mysql-connector-python==8.0.27
+Naked==0.1.31
 nbclient==0.5.10
 nbconvert==5.6.0
 nbformat==4.4.0
@@ -88,6 +90,7 @@ psutil==5.8.0
 ptyprocess==0.6.0
 pure-eval==0.2.1
 pycparser==2.21
+pycryptodome==3.15.0
 Pygments==2.4.2
 PyJWT==1.7.1
 PyMySQL==1.0.2
@@ -106,6 +109,7 @@ QtPy==2.0.0
 requests==2.22.0
 schedule==0.6.0
 Send2Trash==1.5.0
+shellescape==3.8.1
 six==1.12.0
 sortedcontainers==2.4.0
 soupsieve==1.9.4
